<resources>

    <!-- Nome do projeto e barra de status. -->
    <string name="app_name">UNORPproject</string>

    <!-- Tela de Login. -->
    <string name="logo">Logo</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="btentrar">Entrar</string>
    <string name="btcadastro">Criar uma conta</string>
    <string name="demo">Demonstração</string>

    <!-- Tela de Demonstração. -->
    <string name="consume">Consumo em Watts:</string>
    <!-- Sugestão de Watts. -->
    <string name="exwatt">Ex: 500</string>
    <string name="tempouso">Horas de uso diarias:</string>
    <!-- Sugestão de Horas. -->
    <string name="extempo">Ex: 5</string>
    <string name="btcalcular">Calcular</string>

    <!-- Campos da tabela da tela de demonstração. -->
    <string name="dias">Dias</string>
    <string name="diasuteis">20</string>
    <string name="diasmes">30</string>
    <string name="consumo">Consumo (kWh)</string>
    <string name="valor">Custo (R$)</string>

    <!-- Tela de Cadastro. -->
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="btcadastrar">Cadastrar</string>
    <string name="titulo">Voltar</string>

    <!-- Tela do Perfil do Usuário -->
    <string name="imageuser">UserImage</string>
    <string name="notfound">Not Found</string>
    <string name="btvoltar">Voltar</string>

    <!-- Tela Principal do Usuário -->
    <string name="adicionarItem">Adicionar</string>
    <string name="removerItem">Remover</string>
    <string name="itens">Itens</string>
    <string name="watts">Watts</string>
    <string name="hrs">Hrs</string>
    <string name="qtdItem">Qtd</string>
    <string name="gasto">Gasto</string>

    <!-- Opções barra de ferramentas -->
    <string name="perfilUsuario">Perfil do Usuário</string>
    <string name="ajuda">Ajuda</string>

    <!-- Variáveis na tela de adicionar itens -->
    <string name="novoItem">Novo Item</string>
    <string name="nomeItem">Nome</string>
    <string name="potencia">Potência (W)</string>
    <string name="qtd">Qtd</string>
    <string name="horasuso">Tempo de uso (h)</string>
    <string name="checkbox">Checkbox</string>

    <string name="nomeImagem">Imagem</string>
    <string name="dicas">Dicas Econômicas</string>
    <string name="dica1">1 - Ao sair de um cômodo, desligue o ventilador.</string>
    <string name="btcancelar">Cancelar</string>
    <string name="btsalvar">Salvar</string>

    <!-- Opções da tabela da tela principal -->
    <string name="computador">Computador</string>


    <string name="lampadaled">Lâmp. LED</string>


    <string name="chuveiro">Chuveiro</string>


    <string name="ventilador">Ventilador</string>


    <string name="grill">Grill</string>


    <string name="gastototal">Gasto Total</string>

</resources>