<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/imges"
        tools:context=".MainActivity">

        <include layout="@layout/custom_toolbar"/>

        <TextView
            android:id="@+id/textView"
            style="@style/textos"
            android:layout_marginTop="30dp"
            android:text="@string/consume"
            app:layout_constraintTop_toBottomOf="@+id/table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_watts"
            style="@style/campos"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:hint="@string/exwatt"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"/>

        <TextView
            android:id="@+id/textView2"
            style="@style/textos"
            android:layout_marginTop="30dp"
            android:text="@string/tempouso"
            app:layout_constraintTop_toBottomOf="@id/et_watts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_tempouso"
            style="@style/campos"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:hint="@string/extempo"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_calcular"
            style="@style/botoes"
            android:layout_marginTop="50dp"
            android:text="@string/btcalcular"
            app:layout_constraintTop_toBottomOf="@id/et_tempouso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TableLayout
            android:id="@+id/table"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:background="@drawable/borda_table">

            <TableRow android:layout_height="match_parent">
                <TextView
                    style="@style/tablerow"
                    android:background="@drawable/borda_row_topleft"
                    android:text="@string/dias"/>
                <TextView
                    style="@style/tablerow"
                    android:text="@string/consumo"/>
                <TextView
                    style="@style/tablerow"
                    android:background="@drawable/borda_row_topright"
                    android:text="@string/valor"/>
            </TableRow>

            <TableRow android:layout_height="match_parent">
                <TextView
                    style="@style/tablerowmenor"
                    android:text="@string/diasuteis"/>
                <TextView android:id="@+id/consumouteis"
                    style="@style/tablerowmenor"/>
                <TextView android:id="@+id/custouteis"
                    style="@style/tablerowmenor"/>
            </TableRow>

            <TableRow android:layout_height="match_parent">
                <TextView
                    style="@style/tablerowmenor"
                    android:background="@drawable/borda_row_bottomleft"
                    android:text="@string/diasmes"/>
                <TextView android:id="@+id/consumomes"
                    style="@style/tablerowmenor"/>
                <TextView android:id="@+id/customes"
                    style="@style/tablerowmenor"
                    android:background="@drawable/borda_row_bottomright"/>
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>