<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imges"
        tools:context=".CadastroForm">

        <include layout="@layout/custom_toolbar" />

        <TextView
            android:id="@+id/tv"
            style="@style/textos"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_nome"
            style="@style/campos"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:hint="@string/nome"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv" />

        <EditText
            android:id="@+id/et_cpf"
            style="@style/campos"
            android:layout_marginTop="30dp"
            android:autofillHints="no"
            android:hint="@string/cpf"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nome" />

        <EditText
            android:id="@+id/et_email"
            style="@style/campos"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_cpf" />

        <EditText
            android:id="@+id/et_senha"
            style="@style/campos"
            android:layout_marginTop="30dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cadastrar"
            style="@style/botoes"
            android:layout_marginTop="50dp"
            android:text="@string/btcadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_senha" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
