<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imges"
        tools:context=".AreaUsuario">

        <include layout="@layout/custom_toolbar"/>

        <View
            android:id="@+id/containerUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/backuser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_user"
            app:layout_constraintTop_toTopOf="@id/containerUser"
            app:layout_constraintStart_toStartOf="@id/containerUser"
            app:layout_constraintEnd_toEndOf="@id/containerUser"
            app:layout_constraintBottom_toBottomOf="@id/containerUser"
            android:contentDescription="@string/imageuser"/>

        <TextView
            android:id="@+id/nome"
            android:layout_marginTop="10dp"
            android:text="@string/notfound"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            style="@style/textos"
            app:layout_constraintTop_toBottomOf="@id/containerUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ic_image_User"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_user"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/imageuser"
            app:tint="@color/cinzinha"
            app:layout_constraintTop_toBottomOf="@id/containerUser"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/nomeUser"
            android:layout_marginLeft="80dp"
            android:text="@string/notfound"
            style="@style/textos"
            app:layout_constraintTop_toTopOf="@id/ic_image_User"
            app:layout_constraintStart_toEndOf="@id/ic_image_User"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ic_email_User"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_email"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/email"
            app:tint="@color/cinzinha"
            app:layout_constraintTop_toBottomOf="@id/ic_image_User"
            app:layout_constraintStart_toStartOf="@id/ic_image_User"/>

        <TextView
            android:id="@+id/emailUser"
            android:layout_marginLeft="80dp"
            android:text="@string/notfound"
            style="@style/textos"
            app:layout_constraintTop_toTopOf="@id/ic_email_User"
            app:layout_constraintStart_toEndOf="@id/ic_image_User"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_sair"
            android:layout_marginTop="50dp"
            android:text="@string/sair"
            style="@style/botoes"
            app:layout_constraintTop_toBottomOf="@id/emailUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>